--- a/src/locale/ja/LC_MESSAGES/sampleapp.po
+++ b/src/locale/ja/LC_MESSAGES/sampleapp.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-07-01 02:57+0000\n"
+"PO-Revision-Date: 2016-07-14 03:28+0000\n"
 "Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -3120,7 +3120,7 @@ msgstr "*index.html*"
 
 #: ../doc/sampleapp/tips/media.rst:94
 msgid "Using Media API to Play Sound Effects"
-msgstr "Cordova のメディア操作プラグイン使用した、効果音の再生"
+msgstr "Cordova のメディア操作プラグインを使用した、効果音の再生"
 
 #: ../doc/sampleapp/tips/media.rst:96
 msgid ""
@@ -3129,7 +3129,7 @@ msgid ""
 "effect to it. This sample app will have different sounds for each fortune "
 "result. You will need to place *mp3* files and modify :file:`index.html` as "
 "follows."
-msgstr "このサンプルでは、`おみくじ占いアプリ <https://docs.monaca.io/en/sampleapp/samples/omikuji/>`_ に効果音を新たに追加します。また、おみくじの結果に応じて、異なる効果音を使用しています。次のように、*mp3* ファイルを新たに追加して、:file:`index.html` の記述をサンプルのように修正します。"
+msgstr "このサンプルでは、`おみくじ占いアプリ <https://docs.monaca.io/en/sampleapp/samples/omikuji/>`_ に、新たに効果音を追加します。また、おみくじの結果に応じて、異なる効果音を使用しています。次のように、*mp3* ファイルを新たに追加して、:file:`index.html` の記述をサンプルのように修正します。"
 
 #: ../doc/sampleapp/tips/media.rst:103
 msgid "You can download the complete source code here."
