--- a/src/locale/ja/LC_MESSAGES/faq.po
+++ b/src/locale/ja/LC_MESSAGES/faq.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-07-08 04:36+0000\n"
-"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
+"PO-Revision-Date: 2016-07-15 02:21+0000\n"
+"Last-Translator: Masahiro Tanaka <masahiro@asial.co.jp>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -192,8 +192,8 @@ msgstr "全画面表示のアプリは作成できますか？"
 #: ../doc/faq/application.rst:110
 msgid ""
 "You can develop a full-screen app by using predefined configuration in "
-"*AndroidManifest* or :file:`MonacaSkeleton-Info.plist` file. For more "
-"details, please refer to `here "
+"*AndroidManifest* or :file:`MonacaApp-Info.plist` file. For more details, "
+"please refer to `here "
 "<https://docs.monaca.io/en/reference/config/ios_configuration/>`_ ."
 msgstr ""
 
@@ -530,8 +530,8 @@ msgstr "スプラッシュ画面に使用している画像が適当か確認し
 
 #: ../doc/faq/build.rst:116
 msgid ""
-"There may be a description error in the :file:`MonacaSkeleton-Info.plist` in"
-" case of iOS or :file:`AndroidManifest.xml` in case of Android."
+"There may be a description error in the :file:`MonacaApp-Info.plist` in case"
+" of iOS or :file:`AndroidManifest.xml` in case of Android."
 msgstr ""
 
 #: ../doc/faq/build.rst:117
