--- a/src/locale/ja/LC_MESSAGES/faq.po
+++ b/src/locale/ja/LC_MESSAGES/faq.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-07-15 02:21+0000\n"
-"Last-Translator: Masahiro Tanaka <masahiro@asial.co.jp>\n"
+"PO-Revision-Date: 2016-07-21 03:43+0000\n"
+"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -192,8 +192,8 @@ msgstr "全画面表示のアプリは作成できますか？"
 #: ../doc/faq/application.rst:110
 msgid ""
 "You can develop a full-screen app by using predefined configuration in "
-"*AndroidManifest* or :file:`MonacaApp-Info.plist` file. For more details, "
-"please refer to `here "
+"*AndroidManifest* or :file:`MonacaSkeleton-Info.plist` file. For more "
+"details, please refer to `here "
 "<https://docs.monaca.io/en/reference/config/ios_configuration/>`_ ."
 msgstr ""
 
@@ -415,7 +415,7 @@ msgstr "[ iOS アプリ設定 ] の [ 対象デバイス ] オプションで、
 msgid ""
 "Tell me how to upload to Apple App Store in order to submit the registration"
 " of the app that was built."
-msgstr "ビルドしたアプリを App Store に登録したいのですが、アップロード方法を教えてください。"
+msgstr ""
 
 #: ../doc/faq/build.rst:62
 msgid ""
@@ -423,7 +423,7 @@ msgid ""
 "Loader* which runs on OSX only. Application Loader can be downloaded for "
 "free from the Apple website (iTunes Connect). This information is as of "
 "September 2012."
-msgstr "App Store へのアップロードには、*Application Loader* ( Mac OS X 上のみで動作 ) が必要です。Application Loader は、Apple のサイト ( iTunes Connect ) から無償でダウンロードできます ( 2012年9月現在 )。"
+msgstr ""
 
 #: ../doc/faq/build.rst:67
 msgid ""
@@ -530,8 +530,8 @@ msgstr "スプラッシュ画面に使用している画像が適当か確認し
 
 #: ../doc/faq/build.rst:116
 msgid ""
-"There may be a description error in the :file:`MonacaApp-Info.plist` in case"
-" of iOS or :file:`AndroidManifest.xml` in case of Android."
+"There may be a description error in the :file:`MonacaSkeleton-Info.plist` in"
+" case of iOS or :file:`AndroidManifest.xml` in case of Android."
 msgstr ""
 
 #: ../doc/faq/build.rst:117
@@ -1183,7 +1183,7 @@ msgstr "Monaca を初めてお使いになる場合には、こちらから `登
 
 #: ../doc/faq/general.rst:83
 msgid "What is Cordova Core Plugins?"
-msgstr "基本 Cordova プラグイン ( Cordova コアプラグイン ) とは何ですか？"
+msgstr ""
 
 #: ../doc/faq/general.rst:84
 msgid ""
@@ -1194,7 +1194,7 @@ msgid ""
 "information of Cordova Core Plugins usage in Monaca, please refer to "
 ":ref:`monaca_with_cordova` and `here "
 "<https://cordova.apache.org/docs/en/latest/>`_ ."
-msgstr "基本 Cordova プラグイン ( 別名 「 Cordova コアプラグイン 」 ) とは、Apache Cordova プロジェクト提供のオープンソースを基礎とした、モバイルアプリ開発用のフレームワークです。Nitobi 社が開発に着手して、その後、Adobe 社が継続して開発を行っています ( Nitobi 社は、Adobe 社に吸収されました )。Monaca では、JavaScript を使用して、基本 Cordova プラグイン経由で、スマートフォン搭載の機能にアクセスします。Monaca における 基本 Cordova プラグインの使用方法に関しては、:ref:`monaca_with_cordova` と `こちら <https://cordova.apache.org/docs/en/latest/>`_ をご確認ください。"
+msgstr ""
 
 #: ../doc/faq/general.rst:89
 msgid "Can I develop commercial smartphone applications using Monaca?"
