--- a/src/locale/ja/LC_MESSAGES/quick_start.po
+++ b/src/locale/ja/LC_MESSAGES/quick_start.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-07-21 06:22+0000\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
+"PO-Revision-Date: 2016-07-25 02:12+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1936,11 +1936,11 @@ msgstr "年額料金プランの場合"
 
 #: ../doc/quick_start/monaca_intro.rst:134
 msgid "There is no trial period for annual plans."
-msgstr ""
+msgstr "年額料金プランには、無料トライアル期間はございません。"
 
 #: ../doc/quick_start/monaca_intro.rst:135
 msgid "You will be charged annual price when starting the subscription."
-msgstr ""
+msgstr "ご登録後、直ちに年額をご請求します。"
 
 #: ../doc/quick_start/monaca_intro.rst:136
 msgid ""
@@ -1948,7 +1948,7 @@ msgid ""
 "admission, unless you have switched Basic plan. For example, you subscribe "
 "to the annual plan on July 20th 2016. Then, your next charge will be on "
 "August 1st 2017."
-msgstr ""
+msgstr "ご契約の更新日は、登録月から起算して、13 ヶ月目の 1 日となります ( ただし、Basic プランに変更した場合は、この限りではありません )。たとえば、2016年7月20日に、年額プランにご登録された場合、更新日は、2017年8月1日になります。"
 
 #: ../doc/quick_start/monaca_intro.rst:137
 msgid "If you want to upgrade annual plan to another, please contact us."
