--- a/src/locale/sampleapp.pot
+++ b/src/locale/sampleapp.pot
@@ -46,7 +46,7 @@ msgid "*Tested Environments:* Android 4.2.2, iOS 7.1.1"
 msgstr ""
 
 #: ../doc/sampleapp/samples/age-calc.rst:25
-msgid ":download:`BirthYear App <download/age-calc.zip>`"
+msgid ":download:`Click here to download the project <download/age-calc.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/age-calc.rst:28
@@ -217,7 +217,7 @@ msgid "*Tested Environments:* Android 4.1.1, iOS 7.1.1"
 msgstr ""
 
 #: ../doc/sampleapp/samples/backend_memo.rst:22
-msgid ":download:`Backend Memo App <download/backend_memo.zip>`"
+msgid ":download:`Click here to download the project <download/backend_memo.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/backend_memo.rst:25
@@ -400,7 +400,7 @@ msgid "*Tested Environments:* Android 4.4, iOS 8.1.1"
 msgstr ""
 
 #: ../doc/sampleapp/samples/break_the_bricks.rst:23
-msgid ":download:`Break the Bricks App <download/break_the_bricks.zip>`"
+msgid ":download:`Click here to download the project <download/break_the_bricks.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/break_the_bricks.rst:34
@@ -483,7 +483,7 @@ msgid "This sample app is a clock app displaying current Date and time."
 msgstr ""
 
 #: ../doc/sampleapp/samples/clock.rst:24
-msgid ":download:`Clock App <download/clock.zip>`"
+msgid ":download:`Click here to download the project <download/clock.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/clock.rst:36
@@ -542,7 +542,7 @@ msgid "*Tested Environments:* Android 4.3, iOS 7.1.1"
 msgstr ""
 
 #: ../doc/sampleapp/samples/facebook.rst:22
-msgid ":download:`Facebook Client App <download/facebook.zip>`"
+msgid ":download:`Click here to download the project <download/facebook.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/facebook.rst:27
@@ -759,7 +759,7 @@ msgid "This sample app shows how to retrieve pictures from Flickr and displays t
 msgstr ""
 
 #: ../doc/sampleapp/samples/flickr.rst:21
-msgid ":download:`Flickr Sample App <download/flickr.zip>`"
+msgid ":download:`Click here to download the project <download/flickr.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/flickr.rst:31
@@ -821,7 +821,7 @@ msgid "This sample app is a PhoneGap Demo showing several device functionalities
 msgstr ""
 
 #: ../doc/sampleapp/samples/hello_world.rst:23
-msgid ":download:`Hello World App <download/hello_world.zip>`"
+msgid ":download:`Click here to download the project <download/hello_world.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/hello_world.rst:36
@@ -1034,7 +1034,7 @@ msgid "In order to test this application, you can either build the application o
 msgstr ""
 
 #: ../doc/sampleapp/samples/ibeacon.rst:26
-msgid ":download:`iBeacon App <download/ibeacon.zip>`"
+msgid ":download:`Click here to download the project <download/ibeacon.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/ibeacon.rst:31
@@ -1147,7 +1147,7 @@ msgid "In this page, we will show how to integrate the mobile ads using the mobi
 msgstr ""
 
 #: ../doc/sampleapp/samples/inmobi.rst:20
-msgid ":download:`Inmobi Client App <download/inmobi.zip>`"
+msgid ":download:`Click here to download the project <download/inmobi.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/inmobi.rst:23
@@ -1280,7 +1280,7 @@ msgid "This sample app allows user to create a memo application using local stor
 msgstr ""
 
 #: ../doc/sampleapp/samples/memo_application.rst:23
-msgid ":download:`Memo Application <download/memo_application.zip>`"
+msgid ":download:`Click here to download the project <download/memo_application.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/memo_application.rst:33
@@ -1387,7 +1387,7 @@ msgid "This is an empty template of a Monaca project."
 msgstr ""
 
 #: ../doc/sampleapp/samples/minimum_project.rst:23
-msgid ":download:`Minimum Template <download/minimum_project.zip>`"
+msgid ":download:`Click here to download the project <download/minimum_project.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/minimum_project.rst:28
@@ -1419,7 +1419,7 @@ msgid "Omikuji is a Japanese word means “random fortunes”. In Monaca, app de
 msgstr ""
 
 #: ../doc/sampleapp/samples/omikuji.rst:22
-msgid ":download:`Omikuji Fortune Telling App <download/omikuji.zip>`"
+msgid ":download:`Click here to download the project <download/omikuji.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/omikuji.rst:33
@@ -1494,7 +1494,7 @@ msgid "This is a minimum template for `Onsen UI <http://onsenui.io/>`_ applicati
 msgstr ""
 
 #: ../doc/sampleapp/samples/onsen_ui_minimum_project.rst:23
-msgid ":download:`Onsen UI Minimum Template <download/onsen_ui_minimum_project.zip>`"
+msgid ":download:`Click here to download the project <download/onsen_ui_minimum_project.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/onsen_ui_minimum_project.rst:33
@@ -1573,7 +1573,7 @@ msgid "This is a template using `Onsen UI sliding menu <http://onsenui.io/guide/
 msgstr ""
 
 #: ../doc/sampleapp/samples/onsen_ui_sliding_menu.rst:22
-msgid ":download:`Onsen UI Sliding Menu Sample <download/onsen_ui_sliding_menu.zip>`"
+msgid ":download:`Click here to download the project <download/onsen_ui_sliding_menu.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/onsen_ui_sliding_menu.rst:32
@@ -1629,7 +1629,7 @@ msgid "This is a template using `Onsen UI tabbar <http://onsenui.io/guide/overvi
 msgstr ""
 
 #: ../doc/sampleapp/samples/onsen_ui_tabbar_navigator.rst:22
-msgid ":download:`Onsen UI Tabbar Navigation Sample <download/onsen_ui_tabbar_navigator.zip>`"
+msgid ":download:`Click here to download the project <download/onsen_ui_tabbar_navigator.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/onsen_ui_tabbar_navigator.rst:32
@@ -1709,7 +1709,7 @@ msgid "This is an RSS reader application using jQuery."
 msgstr ""
 
 #: ../doc/sampleapp/samples/sample_rss_reader.rst:23
-msgid ":download:`RSS Reader App <download/sample_rss_reader.zip>`"
+msgid ":download:`Click here to download the project <download/sample_rss_reader.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/sample_rss_reader.rst:33
@@ -1797,7 +1797,7 @@ msgid "*Tested Environments:* Android 4.0, iOS 7.1.1"
 msgstr ""
 
 #: ../doc/sampleapp/samples/shinkansen.rst:21
-msgid ":download:`Train Catalog App <download/shinkansen.zip>`"
+msgid ":download:`Click here to download the project <download/shinkansen.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/shinkansen.rst:32
@@ -1837,7 +1837,7 @@ msgid "The application allows you to add a todo list."
 msgstr ""
 
 #: ../doc/sampleapp/samples/todo.rst:22
-msgid ":download:`TODO App <download/todo.zip>`"
+msgid ":download:`Click here to download the project <download/todo.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/todo.rst:34
@@ -1885,7 +1885,7 @@ msgid "This sample app is showing the Twitter Timeline of a specifice user. It a
 msgstr ""
 
 #: ../doc/sampleapp/samples/twitter.rst:22
-msgid ":download:`Twitter Client App <download/twitter.zip>`"
+msgid ":download:`Click here to download the project <download/twitter.zip>`"
 msgstr ""
 
 #: ../doc/sampleapp/samples/twitter.rst:27
