--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-06-29 03:02+0000\n"
+"PO-Revision-Date: 2016-07-27 02:05+0000\n"
 "Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,7 @@ msgstr "**Onsen UI** はフロントエンド開発用のツールです。**Ons
 msgid ""
 "For more information on **Onsen UI**, please go to `Onsen UI home page "
 "<http://onsenui.io>`_."
-msgstr "**Onsen UI** の詳細に関しては `Onsen UI ホームページ <http://ja.onsenui.io>`_ をご確認ください。"
+msgstr "**Onsen UI** の詳細に関しては `Onsen UI ホームページ <https://ja.onsenui.io>`_ をご確認ください。"
 
 #: ../doc/onsenui/index.rst:25
 msgid "Starting a new Onsen UI project in Monaca"
@@ -73,4 +73,4 @@ msgid ""
 "Now you have Onsen UI installed. See examples in `Onsen UI Docs "
 "<http://onsenui.io/guide/overview.html>`_  for how to use Onsen UI "
 "components."
-msgstr "ここまでの手順で、Onsen UI のインストールが完了しました。Onsen UI コンポーネントの使用方法とサンプルに関しては `Onsen UI ドキュメント <http://ja.onsenui.io/guide/overview.html>`_  をご確認ください。"
+msgstr "ここまでの手順で、Onsen UI のインストールが完了しました。Onsen UI コンポーネントの使用方法とサンプルに関しては `Onsen UI ドキュメント <http://onsenui.io/guide/overview.html>`_  をご確認ください。"
